syntax = "proto2";
package pymoliere;


// This is used to specify the remote location of pubmed articles.
// Defaults to the most recent baseline.
message FtpSource {
  optional string address = 1 [default = "ftp.ncbi.nlm.nih.gov"];
  // The remote location to download from
  optional string workdir = 2 [default = "pubmed/baseline"];
}

// The ClusterConfig defines the ray cluster connection param. Any cluster-specific deatuls will occur here.
message ClusterConfig {
  // Where to connect to cluster.
  optional string address = 1;
  optional int32 port = 2 [default = 8786];
  // Fast scratch dir to use for intermediate storage.
  optional string local_scratch = 3 [default="/tmp"];
  optional string shared_scratch = 4;
}

////////////////////////////////////////////////////////////////////////////////

// Config used to construct the network.
message ConstructConfig {
  // Details about the ray cluster
  optional ClusterConfig cluster = 1;
  // Details about the medline distribution to download.
  optional FtpSource ftp = 3;
}

// Config used to query the network.
message QueryConfig {
  optional ClusterConfig cluster = 1;
}
